# harold

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
baml_src/: clients.baml  generators.baml  scene.baml
evals/: run_evals.py
evals/datasets/: improv_quality.yaml
evals/evaluators/: improv.py
scripts/: seed_knowledge.py  smoke_test.py
src/harold/: __main__.py  bootstrap.py  config.py  dependencies.py  observability.py
src/harold/agents/: __init__.py  coach.py  pattern_analyzer.py  prompts.py  scene_partner.py
src/harold/interfaces/: api.py  characters.py  cli.py  harold_format.py  rendering.py  scene_management.py
src/harold/memory/: base.py  embeddings.py
src/harold/memory/backends/: in_memory.py  neo4j.py  pgvector.py
src/harold/models/: character.py  coaching.py  harold_format.py  memory.py  scene.py  techniques.py  types.py  workflow.py
src/harold/tools/: analysis_tools.py  coaching_tools.py  memory_tools.py  scene_tools.py
tests/: conftest.py  test_api.py  test_cli.py  test_coach.py  test_embeddings.py  test_memory.py  test_neo4j.py  test_observability.py  test_pattern_analyzer.py  test_pgvector.py  test_scene_management.py  test_scene_partner.py  test_tools.py  test_trajectory_memory.py  test_workflow.py
