[project]
name = "harold"
version = "0.1.0"
description = "An AI improviser and comedy coach"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic-ai>=0.2",
    "anthropic>=0.40",
    "pydantic-settings>=2.0",
    "rich>=13.0",
    "baml-py>=0.85",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-http>=1.20",
    "asyncpg>=0.30",
    "pgvector>=0.3",
]

[project.scripts]
harold = "harold.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "hypothesis>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
]
phoenix = [
    "arize-phoenix>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/harold"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
src = ["src", "tests"]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["asyncpg", "asyncpg.*", "pgvector.*"]
ignore_missing_imports = true
